--- a/resources/views/layouts/main.edge
+++ b/resources/views/layouts/main.edge
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
+    {{--  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">  --}}
+		{{ style('https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css') }}
+		{{--  <link rel="stylesheet" href="../../public/style.css">  --}}
+		{{ style('style') }}
     <title>College App</title>
   </head>
   <body>
@@ -23,9 +25,7 @@
 
 		@!section('after-main')		
 
-		<footer class="container">
-			@include('partials.footer')
-		</footer>
+		@include('partials.footer')
 
 		@!section('before-scripts')
 
