--- a/resources/views/partials/footer.edge
+++ b/resources/views/partials/footer.edge
@@ -1,1 +1,5 @@
-<p class="text-center mt-4">Copyright 2020, Elvis Onobo</p>
+{{ style('style') }}
+
+<footer class="row bg-warning justify-content-center bg-danger text-white">
+		<p class="mt-4">Copyright 2020, Elvis Onobo</p>
+</footer>
