--- a/resources/views/partials/nav.edge
+++ b/resources/views/partials/nav.edge
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-warning">
+<nav class="navbar navbar-expand-lg navbar-light bg-danger">
 	<a class="navbar-brand" href="#">CollegeApp</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
