--- a/resources/views/home.edge
+++ b/resources/views/home.edge
@@ -49,7 +49,9 @@
             </li>
         </ul>
 
-    </nav>
+		</nav>
+		
+		Hello {{ auth.user.username }}!
     <!-- Page Content -->
     <div id="content">
 
