--- a/resources/views/login.edge
+++ b/resources/views/login.edge
@@ -10,7 +10,7 @@
 
 				<div class="form-group">
 					<label for="exampleInputEmail1">Email address</label>
-					<input type="email" name="email" class="form-control rounded-0" id="exampleInputEmail1" aria-describedby="emailHelp">
+					<input type="email" name="email" class="form-control rounded-0" id="exampleInputEmail1" aria-describedby="emailHelp" value="{{ old('email', '') }}">
 					<small id="emailHelp" class="form-text text-muted">We'll gladly share your email with anyone, lol!.</small>
 				</div>
 				<div class="form-group">
@@ -18,10 +18,10 @@
 					<input type="password" name="password" class="form-control rounded-0" id="exampleInputPassword1">
 				</div>
 				<div class="form-group form-check">
-					<input type="checkbox" class="form-check-input" id="exampleCheck1">
+					<input type="checkbox" name="remember" class="form-check-input" id="exampleCheck1">
 					<label class="form-check-label" for="exampleCheck1">Remember me</label>
 				</div>
-				<button type="submit" class="btn btn-primary rounded-0">Submit</button>
+				<button type="submit" class="btn btn-dark rounded-0">Submit</button>
 			</form>
 		</div>
 	</div>
