--- a/resources/views/partials/nav.edge
+++ b/resources/views/partials/nav.edge
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-danger">
-	<a class="navbar-brand" href="#">CollegeApp</a>
+<a class="navbar-brand" href="{{ route('home') }}">CollegeApp</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	</button>
@@ -7,7 +7,7 @@
 		<ul class="navbar-nav mr-auto">
 			@loggedIn
 				<li class="nav-item active">
-					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+				<a class="nav-link" href="{{ route('home') }}">Home <span class="sr-only">(current)</span></a>
 				</li>
 			@else
 				<li class="nav-item">
@@ -19,7 +19,11 @@
 			@endloggedIn
 		</ul>
 		<span class="navbar-text">
-				<a class="nav-link" href="#">Login</a>
+			@loggedIn
+				<a class="nav-link" href="{{ route('logoutUser') }}">Logout</a>
+			@else
+				<a class="nav-link" href="{{ route('login') }}">Login</a>
+			@endloggedIn
 		</span>
 	</div>
 </nav>
