--- a/resources/views/partials/footer.edge
+++ b/resources/views/partials/footer.edge
@@ -1,5 +1,5 @@
 
 
-<footer class="row bg-warning justify-content-center bg-danger text-white">
+<footer class="row bg-warning justify-content-center bg-danger text-white" style="position: absolute; bottom:0; left: 0px; width:100%; overflow-x: hidden;">
 		<p class="mt-4">Copyright 2020, Elvis Onobo</p>
 </footer>
