--- a/resources/views/layouts/main.edge
+++ b/resources/views/layouts/main.edge
@@ -8,11 +8,11 @@
     <!-- Bootstrap CSS -->
     {{--  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">  --}}
 		{{ style('https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css') }}
-		<link rel="stylesheet" href="../../public/style.css">
-		{{--  /{{ style('/public/style') }}  --}}
+		{{--  <link rel="stylesheet" href="../../public/style.css">  --}}
+		{{ style('styles') }}
     <title>College App</title>
   </head>
-  <body>
+  <body style="overflow-x: hidden;">
 		@include('partials.nav')
 		
 		@!section('before-main')
