--- a/resources/views/login.edge
+++ b/resources/views/login.edge
@@ -3,26 +3,31 @@
 @section('main')
 
 <div class="container mt-4">
-		<div class="row justify-content-center" >
-			<form class="card-body" method="post" action="{{ route('login') }}">
-				{{ csrfField() }}
-				<h1>Welcome, Login</h1>
+		<div class="row justify-content-right" >
+			<div class="col-md-5">
+				<form class="card-body" method="post" action="{{ route('login') }}">
+					{{ csrfField() }}
+					<h1>Welcome, Login</h1>
+					 
+					@include('includes.notification')
 
-				<div class="form-group">
-					<label for="exampleInputEmail1">Email address</label>
-					<input type="email" name="email" class="form-control rounded-0" id="exampleInputEmail1" aria-describedby="emailHelp" value="{{ old('email', '') }}">
-					<small id="emailHelp" class="form-text text-muted">We'll gladly share your email with anyone, lol!.</small>
-				</div>
-				<div class="form-group">
-					<label for="exampleInputPassword1">Password</label>
-					<input type="password" name="password" class="form-control rounded-0" id="exampleInputPassword1">
-				</div>
-				<div class="form-group form-check">
-					<input type="checkbox" name="remember" class="form-check-input" id="exampleCheck1">
-					<label class="form-check-label" for="exampleCheck1">Remember me</label>
-				</div>
-				<button type="submit" class="btn btn-dark rounded-0">Submit</button>
-			</form>
+					<div class="form-group">
+						<label for="exampleInputEmail1">Email address</label>
+						<input type="email" name="email" class="form-control rounded-0" id="exampleInputEmail1" aria-describedby="emailHelp" value="{{ old('email', '') }}">
+						<small id="emailHelp" class="form-text text-muted">We'll gladly share your email with anyone, lol!.</small>
+						{{ elIf('<span class="text-danger">$self</span>', getErrorFor('email'), hasErrorFor('email')) }}
+					</div>
+					<div class="form-group">
+						<label for="exampleInputPassword1">Password</label>
+						<input type="password" name="password" class="form-control rounded-0" id="exampleInputPassword1">
+					</div>
+					<div class="form-group form-check">
+						<input type="checkbox" name="remember" class="form-check-input" id="exampleCheck1">
+						<label class="form-check-label" for="exampleCheck1">Remember me</label>
+					</div>
+					<button type="submit" class="btn btn-dark rounded-0">Submit</button>
+				</form>
+			</div>
 		</div>
 	</div>
 
