--- a/resources/views/partials/sidebar.edge
+++ b/resources/views/partials/sidebar.edge
@@ -20,7 +20,7 @@
 											<a href="{{ route('users') }}" class="text-white">All Users</a>
                     </li>
                     <li>
-										<a href="" class="text-white">Departments</a>
+										<a href="" class="text-white">honbg</a>
                     </li>
                     <li>
                         <a href="#" class="text-white">Courses</a>
