--- a/resources/views/hod/add-instructor-course.edge
+++ b/resources/views/hod/add-instructor-course.edge
@@ -6,17 +6,17 @@
 
 <div class="row justify-content-center">
 	<div class="col-md-6 card-body border border-dark">
-		<form class="card-body" method="post" action="{{ route('add-instructor-to-course', {id:user.id}) }}">
+		<form class="card-body" method="post" action="{{ route('add-instructor-to-course', {id: user.id}) }}">
 			{{ csrfField() }}				
 			@include('includes.notification')
 
 			<div class="form-group">
-				<label for="exampleInputEmail1">Attach Instructor To Department</label>
-				<input type="text" name="name" class="form-control rounded-0" id="exampleInputEmail1" value="{{user.firstname}} {{user.lastname}}" readonly>
+				<label for="exampleInputEmail1">Attach Instructor To Course</label>
+			<input type="text" name="name" class="form-control rounded-0" id="exampleInputEmail1" value="{{user.firstname}} {{user.lastname}}" readonly>
 			</div>
 
 			<div class="form-group">
-				<label for="exampleInputEmail1">Departments</label>
+				<label for="exampleInputEmail1">Courses</label>
 				<select class="form-control rounded-0" name="course_id">
 					@each(course in courses)
 						<option value="{{ course.id }}">{{ course.course_title }}</option>
