--- a/resources/views/signup.edge
+++ b/resources/views/signup.edge
@@ -13,23 +13,23 @@
 					{{ csrfField() }}
 					<div class="form-group">
 						<label for="firstname">First Name</label>
-						<input type="text" name="firstname" class="form-control rounded-0">
+						<input type="text" name="firstname" class="form-control rounded-0" value="{{ old('firstname', '') }}">
 					</div>
 
 					<div class="form-group">
 						<label for="lastname">Last Name</label>
-						<input type="text" name="lastname" class="form-control rounded-0">
+						<input type="text" name="lastname" class="form-control rounded-0" value="{{ old('lastname', '') }}">
 					</div>
 
 					<div class="form-group">
 						<label for="email">Email</label>
-						<input type="email" name="email" class="form-control rounded-0">
+						<input type="email" name="email" class="form-control rounded-0" value="{{ old('email', '') }}">
 						<small id="emailHelp" class="form-text text-muted">We'll gladly share your email with anyone, lol!.</small>
 					</div>
 
 					<div class="form-group">
 						<label for="street">Street</label>
-						<input type="text" name="street" class="form-control rounded-0">
+						<input type="text" name="street" class="form-control rounded-0" value="{{ old('street', '') }}">
 					</div>
 
 					<div class="form-group">
